# Hierarchial_RW

./: .gitignore  README.md
GraphBench/: gin_mst.py  hrw_maxcliques.py  hrw_maxmatching_optimized.py  hrw_mst.py  maxclique.sh  maxclique_gin.py  maxclique_gt.py  maxclique_hrw.py  maxclique_hrw.sh  maxmatching_hrw.py  mst_gin.py  train_matching_gin.py  train_matching_gt.py
GraphBench/bipartite_matching_easy/: results_max_matching_bench.csv
GraphBench/maxclique_hard/: hyperparam_sweep_results_new_v3.csv
GraphBench/maxclique_medium/: hyperparam_sweep_results_new_v3.csv
Plaintoid/: Cora_HRW_original.py  Cora_clean.py  link_prediction_HeART_recurrence.py
Plaintoid/ablations/: link_prediction_ablation.py  model.py  run_ablations_budget.sbatch  run_ablations_rs.sbatch  run_ablations_wl_nw.sbatch  submit_ablations.sh
Plaintoid/data_analysis/: Plaintoid_data_analysis.py  merge_results.py  obgl_analysis.py  plot_ablation_numwalks.py
ablation_study_paper/: eval_hrw_eat_bottleneck.py  pyproject.toml  result.csv  result_aggregated.csv
neuralwalker_standalone/: encoder_ablation.py  grid_search_ddi.sh  grid_search_ddi_arch.sh  grid_search_ddi_walk.sh  run_citeseer_final.sh  run_ddi.py  run_ddi_final.sh  run_ddi_multiseed.sh  run_demo.py  run_pubmed_final.sh  sweep_ddi.yaml
neuralwalker_standalone/Cora/: NeuralWalker_Cora_LinkPred_2ho3823u.csv  NeuralWalker_Cora_LinkPred_39uzyy70.csv  NeuralWalker_Cora_LinkPred_c46pfayi.csv  NeuralWalker_Cora_LinkPred_fzzaen56.csv  NeuralWalker_Cora_LinkPred_jy61xf71.csv  NeuralWalker_Cora_LinkPred_k7z53vr3.csv  experiment_results_neuralwalker.csv
ogb/: lpformer_ddi.py
theoretical_analysis/: hr_hrw_EAT.py  op_eval_hrw_vs_rw.py  single_plot.py
(+37 files in other folders)
