[project]
name = "cwue"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "jupyterlab>=4.4.3",
    "lovely-tensors>=0.1.18",
    "matplotlib>=3.10.3",
    "muon-optimizer",
    "networkx>=3.5",
    "numpy>=2.3.0",
    "ogb>=1.3.6",
    "pandas>=2.3.0",
    "pip>=25.1.1",
    "rotary-embedding-torch>=0.8.6",
    "seaborn>=0.13.2",
    "torch==2.7.0",  # Pin to 2.7.0
    "torch-geometric>=2.6.1",
    "torch-scatter==2.1.2",
    "torch-sparse==0.6.18",
    "torch-cluster==1.6.3",
    "torchrun-jsc>=0.0.18",
    "torchvision==0.22.0",  # Pin to 0.22.0
    "transformers>=4.52.4",
    "wandb>=0.21.0",
    "graphbench-lib",
    "jupytext>=1.19.1",
    "pybind11>=3.0.4",
]

[tool.uv.sources]
cut-cross-entropy = { git = "https://github.com/apple/ml-cross-entropy.git" }
graphbench-lib = { git = "https://github.com/graphbench/package" } # <--- Add this line
torch = [{ index = "pytorch" }]
torchvision = [{ index = "pytorch" }]
torch-sparse = [{ index = "pytorch-geometric" }]
torch-scatter = [{ index = "pytorch-geometric" }]
torch-cluster = [{ index = "pytorch-geometric" }]
muon-optimizer = { git = "https://github.com/KellerJordan/Muon.git" }

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.ngc.nvidia.com/"
explicit = true

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-geometric"
url = "https://data.pyg.org/whl/torch-2.7.0+cu128.html"
format = "flat"
explicit = true

